--- a/header.tex
+++ b/header.tex
@@ -33,6 +33,8 @@
 
 \newcommand\plim{\overset{p}{\rightarrow}}
 \newcommand\Plim{\overset{P}{\rightarrow}}
+\newcommand\dlim{\overset{d}{\rightarrow}}
+\newcommand\Dlim{\overset{D}{\rightarrow}}
 
 \newcommand\prob[1]{\mathbb{P}\left[{#1}\right]}
 \newcommand\expect[1]{\mathbb{E}\left[{#1}\right]}
