--- a/bib4450.bib
+++ b/bib4450.bib
@@ -301,3 +301,9 @@ journal = {American Journal of Epidemiology}
     note = "[Online; accessed 18-August-2025]"
   }
 
+@book{keener10,
+  title={Theoretical statistics: Topics for a core course},
+  author={Keener, Robert W},
+  year={2010},
+  publisher={Springer Science \& Business Media}
+}
