--- a/03/main.Rnw
+++ b/03/main.Rnw
@@ -1233,7 +1233,7 @@ Chapter \CHAPTER: Joint Distributions}
   
   \framebreak
   
-  \begin{exampleblock}{Example: Maximum}
+  \begin{exampleblock}{Example: Minimum}
     Using the same setup as above, find the distribution and density functions for the minimum, $X_{(1)}$.
     
     \mode<article>{
@@ -1318,7 +1318,7 @@ Chapter \CHAPTER: Joint Distributions}
     \end{itemize}
     \begin{align*}
       f_{X_{(j)}}(x) &= \frac{n!}{(j-1)!(n-j)!} f(x) \big(F(x)\big)^{j-1}\big(1 - F(x)\big)^{n-j} \\
-                     & \quad + \sum_{k = j}^{n-1} \binom{n}{k+1}\left[kf(x)\big(F(x)\big)^{k}\big(1 - F(x)\big)^{n-k-1}\right] \\
+                     & \quad + \sum_{k = j}^{n-1} \binom{n}{k+1}\left[(k+1)f(x)\big(F(x)\big)^{k}\big(1 - F(x)\big)^{n-k-1}\right] \\
                      & \quad - \sum_{k = j}^{n-1} \binom{n}{k}\left[(n-k)f(x)\big(F(x)\big)^k\big(1-F(x)\big)^{n-k-1}\right].
     \end{align*}
     \begin{itemize}
