fixed minor typo

--- a/04/main.Rnw
+++ b/04/main.Rnw
@@ -632,7 +632,7 @@ $$
     $$
     \item This expectation is the same for all groups, thus
     $$
-    E[X] = \sum_i E[X_i] = mE[X_i] = mk + m - mkp^k = n\Big(1 + \frac{1}{k} - p^K\Big).
+    E[X] = \sum_i E[X_i] = mE[X_i] = mk + m - mkp^k = n\Big(1 + \frac{1}{k} - p^k\Big).
     $$
     \item We can see now that the expectation of this group testing scenario is $n$ times a proportion $\Big(1 + \frac{1}{k} - p^K\Big)$. Specifically, if we fix $p$ at 1 minus the rate of disease occurrence in a large population, then the number of tests is a function of group size $k$.
     \item Consider using Desmos to play with the value $p$ (start with something like 0.99) as a function of $k$.
@@ -1162,7 +1162,7 @@ $$
 \begin{frame}[allowframebreaks]{Covariance Properties}
   \begin{itemize}
     \item Covariance has several useful properties that can help with calculations.
-    \item One of theme is that the covariance is \alert{bilinear} operator.
+    \item One of them is that the covariance is \alert{bilinear} operator.
     \item You can also show that covariance is an inner-product for a particular inner-product space.
   \end{itemize}
   
