Changed rho -> \rho

--- a/04/main.Rnw
+++ b/04/main.Rnw
@@ -1285,7 +1285,7 @@ $$
 
 \begin{itemize}
   \item By how correlation is defined, it is a unit-less measure. 
-  \item Also, $-1 \leq rho \leq 1$ (HW problem)?
+  \item Also, $-1 \leq \rho \leq 1$ (HW problem)?
 \end{itemize}
 
 \end{frame}
