--- a/hw06/hw06.tex
+++ b/hw06/hw06.tex
@@ -157,7 +157,7 @@
     \begin{enumerate}
         \item (1 point) Show that $V$ is distributed symmetrically about $0$ if and only if $f(t) = f(-t)$, for every $t$. In other words, $f$ is an even function.
         
-        \item (1 point) Show that $E(X) = 0$.
+        \item (1 point) Show that $E(V) = 0$.
     \end{enumerate}
     
 \end{enumerate}
