--- a/04/main.tex
+++ b/04/main.tex
@@ -772,7 +772,7 @@ $$
   
   \begin{itemize}
     
-    \item Letting $\mu = E[X]$, we can use the identity $g(x) = (X - \mu)^2$, and our expression for $E\big[g(X)\big]$ to get a way of calculating the variance.
+    \item Letting $\mu = E[X]$, we can use the identity $g(x) = (x - \mu)^2$, and our expression for $E\big[g(X)\big]$ to get a way of calculating the variance.
   
     \item If $X$ is a discrete random variable, then by Theorem~4.1, 
     $$
