--- a/hw08/hw08.tex
+++ b/hw08/hw08.tex
@@ -134,7 +134,7 @@
     $$
   \end{enumerate}
   
-  \item (1 point) Consider a symmetric random walk, starting at the position $X_0 = 0$. At time $n$, we write the position $S_n$ as 
+  \item (1 point) Consider a symmetric random walk, starting at the position $S_0 = 0$. At time $n$, we write the position $S_n$ as 
   $$
   S_n = S_{n - 1} + X_n,
   $$
